5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3995/executions/1672_2189.log
== TEST (2019-04-28 15:05:06) 
-- CODE:
x=input("nome:").upper()
print(x)
-- OUTPUT:
MARIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:09:07) 
-- CODE:
x=input("nome:").upper()
if(x>=A and x<=K):
	print(x,"vai para a sala 101")
elif(x>=L and x<=N):
	print(x,"vai para a sala 102")
else:
	print(x,"vai para a sala 103")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if(x>=A and x<=K):
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:09:48) 
-- CODE:
x=input("nome:").upper()
if(x>="A" and x<="K"):
	print(x,"vai para a sala 101")
elif(x>="L" and x<="N"):
	print(x,"vai para a sala 102")
else:
	print(x,"vai para a sala 103")

-- OUTPUT:
MARIA vai para a sala 102
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 15:10:01) 
-- CODE:
x=input("nome:").upper()
if(x>="A" and x<="K"):
	print(x,"vai para a sala 101")
elif(x>="L" and x<="N"):
	print(x,"vai para a sala 102")
else:
	print(x,"vai para a sala 103")

-- EXECUTION TIME:
0.121584
-- TEST CASE 1:
---- input:
Maria
---- correct output:
Maria vai para a sala 102
---- user output:
MARIA vai para a sala 102
-- TEST CASE 2:
---- input:
Jose
---- correct output:
Jose vai para a sala 101
---- user output:
JOSE vai para a sala 101
-- TEST CASE 3:
---- input:
Zenilda
---- correct output:
Zenilda vai para a sala 103
---- user output:
ZENILDA vai para a sala 103
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:10:11) 
-- CODE:
x=input("nome:").upper()
if(x>="A" and x<="K"):
	print(x,"vai para a sala 101")
elif(x>="L" and x<="N"):
	print(x,"vai para a sala 102")
else:
	print(x,"vai para a sala 103")

-- OUTPUT:
MARIA vai para a sala 102
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
